--- a/requirements_macos.txt
+++ b/requirements_macos.txt
@@ -1,6 +1,6 @@
-tensorflow-macos # needed for MacOS (M1/M2)
-tensorflow-metal # Metal plugin for GPU acceleration on macOS
-keras
+tensorflow-macos~=2.14.0 # needed for MacOS (M1/M2)
+tensorflow-metal~=1.1.0 # Metal plugin for GPU acceleration on macOS
+keras~=2.14.0
 matplotlib
 numpy
 pyqt5
